# pytest-mini

./: .gitignore  README.md  publish.sh  pyproject.toml  tox.ini
demo/: .gitignore  requirements.txt
demo/cases/: allure_debug.py  conftest.py  test_home.py
demo/pages/: __init__.py  components_page.py
pytest_mini/: __init__.py  allureoperator.py  constant.py  fixture.py  locator.py  logoperator.py  mini.py  plugin.py  timeoperator.py  tools.py
